Resizing fixes
Text no longer overlaps when resizing window

--- a/source/styles/recipe.css
+++ b/source/styles/recipe.css
@@ -1,26 +1,26 @@
 body {
   margin: 0;
+  height: 100%;
 }
 main {
   margin: 5vh 200px;
   grid-template-columns: repeat(12, 1fr);
-  column-gap: 20px;
+  column-gap: 20vh;
   grid-template-rows: auto;
   grid-template-areas: ". header-image header-image header-image header-image header-image header-text header-text header-text header-text  header-text .";
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .header-image {
   grid-area: header-image;
-  width: 500px;
-  height: 500px;
+  width: calc(100vw);
+  height: calc(400px);
   background-color: #e5e5e5;
   border: black solid 1px;
 }
 
 .header-text {
   grid-area: header-text;
-  max-height: 40vh;
   flex-direction: column;
   justify-content: center;
   align-items: left;
@@ -48,29 +48,25 @@ main {
 h1 {
   text-align: left;
   justify-content: left;
-  margin-bottom: 10px;
+  margin-bottom: 10vw;
   font-size: 64px;
   font-weight: 550;
-  font-family: "Montserrat", sans-serif;
 }
 
 h2 {
   font-weight: 320;
   font-size: 54px;
-  font-family: "Montserrat", sans-serif;
 }
 
 p {
   margin: 0;
   text-align: left;
   font-size: 18px;
-  font-family: "Montserrat", sans-serif;
 }
 
 small {
-  margin-top: 30px;
+  margin-top: 30vw;
   font-size: 18px;
-  font-family: "Montserrat", sans-serif;
 }
 
 video {
